# RPIPicoW-OTA-Exp

./: .gitmodules  LICENSE  README.md
blu/: CMakeLists.txt  coreHTTP.cmake  json-maker.cmake  lwip_import.cmake  md5.cmake  tiny-json.cmake  urilib.cmake
blu/port/FreeRTOS-Kernel/: logging_stack.h
blu/port/coreHTTP/: core_http_config.h
blu/src/: CMakeLists.txt  Request.cpp  Request.h  RequestObserver.cpp  RequestObserver.h  TCPTransport.cpp  TCPTransport.h  Transport.cpp  Transport.h  WifiHelper.cpp  WifiHelper.h  cyw43_firmware.h  files.cmake  main.cpp
grn/: CMakeLists.txt
grn/src/: CMakeLists.txt
port/lwip/: lwipopts.h
py/: server.py  testClient.py
